<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/blue">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/blue"
                app:srcCompat="@drawable/ic_backw"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="313dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center|left|left"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="26dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="61dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/your"
            android:textColor="@color/Navyblue"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/shop"
            android:textColor="@color/Navyblue"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:gravity="center"
            android:text="@string/alltext"
            android:textColor="@color/Navyblue"
            android:textSize="15dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>