<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#0000"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="65dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Navyblue"
            android:textSize="35dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="309dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:cursorVisible="false"
                    android:hint="@string/username"
                    android:shadowColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="#6FC9E7" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_lock"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="309dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/noaccount"
                android:textColor="@color/blue"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/register_here"
                android:textColor="@color/Navyblue"
                android:textSize="15dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Navyblue"
                android:text="@string/login" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>