<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Navyblue"
            android:textSize="35dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="309dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person2"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="309dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_email"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="309dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/e_mail" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_lock"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="309dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_lock"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="309dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/confirm_password" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="188dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/already"
                android:textColor="@color/blue"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/log_in2"
                android:textColor="@color/Navyblue"
                android:textSize="15dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Navyblue"
                android:text="@string/register" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>