<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/greyish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:layout_height="53dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/blue"
                app:srcCompat="@drawable/ic_backw"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="313dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center|left|left"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="26dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_person"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center|left|left"
                android:text="@string/profile"
                android:textColor="@color/Navyblue"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_next"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_favorite"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center|left|left"
                android:text="@string/wishlist"
                android:textColor="@color/Navyblue"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_next"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_call"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center|left|left"
                android:text="@string/call_us"
                android:textColor="@color/Navyblue"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_next"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_info"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center|left|left"
                android:text="@string/about_our_app"
                android:textColor="@color/Navyblue"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_next"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="238dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Navyblue"
                android:text="@string/log_out" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>